syntax="proto3";

package user.v1alpha1;

option go_package = "github.com/finiteloopme/xds-from-scratch/api/gen/proto/go/user/v1alpha1;userv1alpha1";

import "google/type/datetime.proto";
// import "google/protobuf/timestamp.proto";

enum UserType{
    USER_TYPE_UNSPECIFIED = 0;
    USER_TYPE_INTERNAL = 1;
    USER_TYPE_EXTERNAL = 2;
}

message User{
    UserType type = 1;
    string first_name = 2;
    string last_name = 3;
}

message SayHelloRequest{
    User user = 1;
    google.type.DateTime received_at = 2;
}

message SayHelloResponse{
    string msg = 1;
    google.type.DateTime responded_at = 2;
}

service HelloService{
    rpc SayHello(SayHelloRequest) returns (SayHelloResponse);
}